Updated translations, naming and hunter spawnrate #release

--- a/src/main/resources/assets/vampirism/guide/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/guide/lang/en_US.lang
@@ -41,7 +41,7 @@ guide.vampirism.levels.altar4.title=Level %d+
 guide.vampirism.levels.altar4.text=This altar requires a multiblock structure. First craft the main block (see Items and Blocks) and place it down, then you have to build pillars at defined position. The pillar block type and height varies depending on the level, on top has to be a tip each. Make sure there are no other blocks (e.g. grass) in the area (Example screenshots at the end). After the structure is complete, put the required amount of items into the altar (Take a look at the following table), shift right click and wait for the magic to happen. Do not use shift click to insert the items into the altar, there is a bug in forge for 1.7.10
 guide.vampirism.levels.altar4.item_text=Required items
 guide.vampirism.levels.altar4.structure1.name=Structure 1
-guide.vampirism.levels.altar4.structure2.name=Structure 2
+guide.vampirism.levels.altar4.structure2.name=Structure 2 (You have to face north when building it)
 guide.vampirism.levels.altar4.item_req=Item requirements
 guide.vampirism.levels.altar4.struc_req=Structure requirements
 guide.vampirism.levels.category=How to level up
