--- a/src/main/resources/assets/vampirism/guide/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/guide/lang/en_US.lang
@@ -11,7 +11,9 @@ guide.vampirism.gettingStarted.overview.text=Vampirism is a mod that adds a whol
 guide.vampirism.gettingStarted.firstSteps.title=First steps
 guide.vampirism.gettingStarted.firstSteps.text=You will start out as a regular player, to become a vampire you have to be bitten by a vampire. So either let them hit you on purpose or just wait until it happens by accident. When they hit you there is a chance, you receive a potion effect called "Sanguinare Vampiris" which lasts a Minecraft day. After the potion has ended, you become a vampire. In case you don't want to become one, you can always cancel the effect with a milk bucket. Alternatively you can right-click with vampire fangs in you hand to inject some blood into you and get the same effect as above.
 guide.vampirism.gettingStarted.asAVampire.title=As a vampire
-guide.vampirism.gettingStarted.asAVampire.text=Once you become a Vampire, one of your main sources of blood (at least the best source) are villagers and you should find plenty of those. Watch out though, there are still Vampires that may attack you, same as when you are a regular player. The Vampire Hunters, however, will not attack you, when you are a level 1 Vampire.\nAs a Vampire, you need to watch how much blood you have. Suck blood by pressing 'F' from Villagers and from some mobs to get more blood. Extra blood can be stored in a Blood Bottle. If you want to transfer blood between the Blood Bottle and the Blood Bar use right click or shift right click on the mouse. You will know which mobs you can't get blood from, as you will receive damage trying to suck their blood. In the beginning you will be a level 1 vampire (the level is displayed above your XP-level) and have improved speed, health and strength.\nTo get to higher vampire levels you have to perform different rituals. When you get above a certain level, Vampires will no longer attack you, but Vampire Hunters will. As you advance through levels your abilities improve, but some disadvantages like sun damage might appear.
+guide.vampirism.gettingStarted.asAVampire.text=Once you become a Vampire, one of your main sources of blood (at least the best source) are villagers and you should find plenty of those. Watch out though, there are still Vampires that may attack you, same as when you are a regular player. The Vampire Hunters, however, will not attack you, when you are a level 1 Vampire.\n As a Vampire, you need to watch how much blood you have. Suck blood by pressing 'F' from Villagers and from some mobs to get more blood. Extra blood can be stored in a Blood Bottle. If you want to transfer blood between the Blood Bottle and the Blood Bar use right click or shift right click on the mouse. When looking at a creature you can suck blood from, small fangs will appear as indicator. To all other creatures you can deal damage by biting them. In the beginning you will be a level 1 vampire (the level is displayed above your XP-level) and have improved speed, health and strength.\nTo get to higher vampire levels you have to perform different rituals. When you get above a certain level, Vampires will no longer attack you, but Vampire Hunters will. As you advance through levels your abilities improve, but some disadvantages like sun damage might appear.
+guide.vampirism.gettingStarted.biteableCreatures.title=Bitten creatures
+guide.vampirism.gettingStarted.biteableCreatures.text=When sucking blood from a creature, you take away some of its blood. While the creature has a low blood level it will be weak, but slowly regenerate blood. \n If you however suck more blood from it, it will die or might become a vampire. Converted creatures will act a little bit different from normal ones, they will take sundamage, but try to avoid the sun. \n Vampire Villagers might even have special offers for you. \n You can also suck blood from other players on your server. Because they are able to defend themselves a little bit, this is only possible from behind.
 
 #Items and Blocks
 guide.vampirism.itemsAndBlocks.category=Items and Blocks
@@ -31,6 +33,8 @@ guide.vampirism.itemsAndBlocks.altars.title=Altar blocks
 guide.vampirism.itemsAndBlocks.coffin.text=The coffin can be used to sleep during the day and to set your spawn-point. It is recommend do place it in spot where the sun does not get. You can change the interior color by shift-right-clicking with a dye on it. 
 guide.vampirism.itemsAndBlocks.used_for_minions=Used for minions
 guide.vampirism.itemsAndBlocks.blood_eye.text=Can be used to locate the nearest castle
+guide.vampirism.itemsAndBlocks.found.weakVampireFang=These are dropped by weak vampires like converted villagers. Can be combined to create a stronger version.
+guide.vampirism.itemsAndBlocks.found.weakHumanHearth=These are dropped by weak humans, like villagers. Can be combined to create a stronger version.
 
 #Levels
 guide.vampirism.levels.introduction.title=Introduction
@@ -48,13 +52,13 @@ guide.vampirism.levels.category=How to level up
 
 #Mobs
 guide.vampirism.mobs.category=Mobs
-guide.vampirism.mobs.hunter.text=Hunts vampires ;)/nOnly attacks players with a vampire level higher than %s./nVampire Hunters near villages try to defend their village.
+guide.vampirism.mobs.hunter.text=Hunts vampires ;)/n Spawns in villages or in small camps all over the world. Only attacks players with a vampire level higher than %s./nVampire Hunters near villages try to defend their village.
 guide.vampirism.mobs.vampire.text=Attacks players as long as they don't have a vampire level higher than %s./nAlso attacks villagers and makes them to vampire./nNight active
 guide.vampirism.mobs.vampire_baron.text=Spawns rarely in vampire biomes./nOccurs in different levels partially depending on the players level./nDrops pure blood./nIs very strong and summons minions which help him
 guide.vampirism.mobs.vampire_minion.title=Vampire Minion
 guide.vampirism.mobs.vampire_minion.text=Are subordinated to their lord./nHave the texture of their lord./nCan be controlled by vampire lord players.
 guide.vampirism.mobs.ghost.text=Spawns in the vampire biome.
-guide.vampirism.mobs.ghost.title=Ghost
+guide.vampirism.mobs.dracula.text=Vampire lord who lives in a large castle. Take a look at the vampire lord section for further information.
 
 #VampirePlayer
 guide.vampirism.vplayer.category=Vampire Player Features
